// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Controlled 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Beskriv bekymringen din
  </label>
  <textarea
    id="<removed>"
    rows="4"
    style="--_ds-field-sizing: <removed>;"
  >
  </textarea>
</ds-field>
<button
  data-variant="secondary"
  style="margin-top: var(--ds-size-2);"
  type="button"
>
  Tøm feltet
</button>
`;

exports[`Disabled 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Disabled Textarea
  </label>
  <textarea
    disabled
    id="<removed>"
    style="--_ds-field-sizing: <removed>;"
  >
  </textarea>
</ds-field>
`;

exports[`Focused 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Label
  </label>
  <textarea
    cols="20"
    id="<removed>"
    rows="3"
    style="--_ds-field-sizing: <removed>;"
  >
  </textarea>
</ds-field>
`;

exports[`Full Width 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Beskriv bekymringen din
  </label>
  <textarea
    id="<removed>"
    style="--_ds-field-sizing: <removed>;"
  >
  </textarea>
</ds-field>
`;

exports[`Preview 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Label
  </label>
  <textarea
    cols="20"
    id="<removed>"
    rows="3"
    style="--_ds-field-sizing: <removed>;"
  >
  </textarea>
</ds-field>
`;

exports[`Read Only 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Read-Only Textarea
  </label>
  <textarea
    id="<removed>"
    readonly
    style="--_ds-field-sizing: <removed>;"
  >
  </textarea>
</ds-field>
`;
